Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-29800

ERROR 1062 (23000): Duplicate entry 'test-t-0' for key 'PRIMARY' on CoR for Spider table, DDL_LOG: Got error 1032 or 12524 when trying to execute action for entry 1/2/3/4/5/6/7 of type 'rename table'

    XMLWordPrintable

Details

    Description

      INSTALL PLUGIN Spider SONAME 'ha_spider.so';
      CREATE SERVER srv FOREIGN DATA WRAPPER MYSQL OPTIONS (SOCKET'',DATABASE'',USER'',PASSWORD 'PWD0');
      CREATE TABLE t (a INT KEY AUTO_INCREMENT) ENGINE=Spider COMMENT='WRAPPER "mysql",srv "srv",TABLE "t"';
      ALTER TABLE t ADD b TEXT;
      CREATE OR REPLACE TABLE t (a INT) ENGINE=Spider;
      

      Leads to:

      bb-10.11-midenok 80625038c703d46e2e01d32da5de234a6c31acb8 (Optimized)

      10.11.0-opt>CREATE OR REPLACE TABLE t (a INT) ENGINE=Spider;
      ERROR 1062 (23000): Duplicate entry 'test-t-0' for key 'PRIMARY'
      

      bb-10.11-midenok 80625038c703d46e2e01d32da5de234a6c31acb8 (Optimized)

      2022-10-15 16:40:29 25 [Warning] Access denied for user ''@'localhost' (using password: YES)
      2022-10-15 16:40:29 4 [ERROR] mysqld: Can't find record in 'spider_tables'
      2022-10-15 16:40:29 4 [ERROR] DDL_LOG: Got error 1032 when trying to execute action for entry 6 of type 'rename table'
      

      Before MDEV-25292 it passes.

      Attachments

        Issue Links

          Activity

            People

              midenok Aleksey Midenkov
              Roel Roel Van de Paar
              Votes:
              0 Vote for this issue
              Watchers:
              7 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0d
                  0d
                  Logged:
                  Time Spent - 2d 38m
                  2d 38m

                  Git Integration

                    Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.