MDEV-29800 ERROR 1062 (23000): Duplicate entry 'test-t-0' for key 'PRIMARY' on CoR...

The CREATE TABLE command can appear in the ha_spider::rename_table(),
so should be handled.